tests/allowPrivilegeEscalation/gatekeeper.yaml
../../submodules/gatekeeper-library/library/pod-security-policy/allow-privilege-escalation/samples/psp-allow-privilege-escalation-container/constraint.yaml
